--- a/admin/assets/css/react-big-calender.css
+++ b/admin/assets/css/react-big-calender.css
@@ -74,7 +74,7 @@ button.rbc-input::-moz-focus-inner {
 }
 
 .rbc-off-range-bg {
-    background: #e6e6e6;
+    background: #898da340;
 }
 
 .rbc-header {
@@ -170,14 +170,15 @@ button.rbc-input::-moz-focus-inner {
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    color: #393c48;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    margin-bottom: 10px;
-    font-size: 16px;
+    margin-bottom: 25px;
+    font-size: 20px;
 }
 
 .rbc-toolbar .rbc-toolbar-label {
@@ -189,42 +190,40 @@ button.rbc-input::-moz-focus-inner {
 }
 
 .rbc-toolbar button {
-    color: #373a3c;
+    color: #464c6c;
     display: inline-block;
     margin: 0;
     text-align: center;
     vertical-align: middle;
-    background: none;
-    background-image: none;
-    border: 1px solid #ccc;
-    padding: 0.375rem 1rem;
-    border-radius: 4px;
-    line-height: normal;
-    white-space: nowrap;
+    background: #ebebeb;
+    border: 1px solid #767c9d33;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: 500;
+    font-size: 15px;
 }
 
 .rbc-toolbar button:active,
 .rbc-toolbar button.rbc-active {
     background-image: none;
-    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    background-color: #e6e6e6;
-    border-color: #adadad;
+    color:white;
+    background-color: #687de8;
+    border-color: #687de8;
 }
 
 .rbc-toolbar button:active:hover,
 .rbc-toolbar button:active:focus,
 .rbc-toolbar button.rbc-active:hover,
 .rbc-toolbar button.rbc-active:focus {
-    color: #373a3c;
-    background-color: #d4d4d4;
-    border-color: #8c8c8c;
+    color: #ffffff;
+    background-color: #687de8;
+    border-color: #687de8;
 }
 
 .rbc-toolbar button:focus {
     color: #373a3c;
-    background-color: #e6e6e6;
-    border-color: #adadad;
+    background-color: #687de8;
+    border-color: #687de8;
 }
 
 .rbc-toolbar button:hover {
@@ -295,8 +294,8 @@ button.rbc-input::-moz-focus-inner {
     -webkit-box-shadow: none;
     box-shadow: none;
     margin: 0;
-    padding: 2px 5px;
-    background-color: #3174ad;
+    padding: 10px 20px;
+    background-color: #687de8;
     border-radius: 5px;
     color: #fff;
     cursor: pointer;
@@ -907,7 +906,7 @@ button.rbc-input::-moz-focus-inner {
     left: 0;
     right: 0;
     height: 1px;
-    background-color: #74ad31;
+    background-color: #687de8;
     pointer-events: none;
 }
 
